nats-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-service
spec:
  selector:
    matchLabels:
      app: thenatsservice
  replicas: 1
  template:
    metadata:
      labels:
        app: thenatsservice
    spec:
      containers:
      - name: user-service
        image: nats-streaming:0.17.0
        args: [
          '-p', 
          '4222', 
          '-m', 
          '8222', 
          '-hbi', 
          '5s', 
          '-hbt', 
          '-5s', 
          '-hbf', 
          '2', 
          '-SD', 
          '-cid', 
          'store'
          ]

---

apiVersion: v1
kind: Service
metadata:
  name: nats-service
spec:
  selector:
    app: thenatsservice
  ports:
  - name: client
    protocol: TCP
    port: 4222
    targetPort: 4222
  - name: monitoring
    protocol: TCP
    port: 8222
    targetPort: 8222
