store-mongodeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-mongodb
spec:
  selector:
    matchLabels:
      app: thestoredatabase
  replicas: 1
  template:
    metadata:
      labels:
        app: thestoredatabase
    spec:
      containers:
      - name: store-mongodb
        image: mongo

---

apiVersion: v1
kind: Service
metadata:
  name: storemongo-service
spec:
  selector:
    app: thestoredatabase
  ports:
  - name: db
    protocol: TCP
    port: 27017
    targetPort: 27017
